<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/select_lng"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:outlineSpotShadowColor="#D81B60"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">
    </androidx.appcompat.widget.AppCompatSpinner>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_lng"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="27dp"
        android:textColor="#D81B60"
        android:fontFamily="sans-serif">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/number0"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#0040ff"
        android:text="@string/number1"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#ff0080"
        android:text="@string/number2"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#00ff00"
        android:text="@string/number3"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#448AFF"
        android:text="@string/number4"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#E040FB"
        android:text="@string/number5"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#E53935"
        android:text="@string/number6"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric6"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#1E88E5"
        android:text="@string/number7"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:fontFamily="sans-serif">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric6"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/number8"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/number9"
        android:textColor="@color/purple_700"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvw_numeric8"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="19dp"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric6">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvw_numeric10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvw_numeric8"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="#E53935"
        android:text="@string/number10"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintRight_toRightOf="parent">
    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>